--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container d-flex align-items-center justify-content-center">
-        <div class="login-container col-6 col-md-4 col-lg-3">
+        <div class="login-container col-8 col-md-4 col-lg-3">
             <div class="form-group">
                 <label for="username" class="form-label-materialize">Username or Email</label>
                 <input type="email" class="form-control" id="username" placeholder="">
@@ -24,7 +24,7 @@
                     <img src="assets/images/icons/eye-icon.svg" alt="eye icon" class="eye-icon touchable">
                 </div>
             </div>
-            <span class="forgot-password float-end mt-2 mb-6">Forgot password?</span>
+            <span class="forgot-password-text float-end mt-2 mb-6">Forgot password?</span>
             <div class="btn-container d-grid gap-2 col-12 mx-auto">
                 <button class="btn btn-primary-color mb-2" type="button">Login</button>
                 <button class="btn btn-google" type="button">
