feat: add reset password mobile version

--- a/login.html
+++ b/login.html
@@ -24,7 +24,9 @@
                     <img src="assets/images/icons/eye-icon.svg" alt="eye icon" class="eye-icon touchable">
                 </div>
             </div>
-            <span class="forgot-password-text float-end mt-2 mb-6">Forgot password?</span>
+            <a class="forgot-password-text float-end mt-2 mb-6" href="reset-password.html">Forgot
+                password?</a>
+
             <div class="btn-container d-grid gap-2 col-12 mx-auto">
                 <button class="btn btn-primary-color mb-2" type="button">Login</button>
                 <button class="btn btn-google" type="button">
