--- a/reset-password.html
+++ b/reset-password.html
@@ -10,8 +10,8 @@
     <title>Reset Password</title>
 </head>
 
-<body class="forgot-password-container">
-    <div class="row">
+<body class="forgot-password-container container d-flex align-items-center justify-content-center">
+    <div class="row col-8 col-md-12">
         <div class="col-12 col-md-6 question-ilustration-container">
             <img src="assets/images/ilustration/question-ilustration.svg" class="question-ilustration" alt="">
         </div>
@@ -19,7 +19,7 @@
             <div class="d-flex align-items-center justify-content-center flex-column text-center">
                 <h1>Reset Password</h1>
                 <p class="enter-email-instruction">Enter your email address linked to this account.</p>
-                <p class="reset-description">We will send you the verification code to reset your password</p>
+                <p class="reset-description-text">We will send you the verification code to reset your password</p>
             </div>
             <div class="form-group">
                 <label for="email" class="form-label-materialize bg-white">Email</label>
