--- a/reset-password.html
+++ b/reset-password.html
@@ -11,6 +11,7 @@
 </head>
 
 <body class="forgot-password-container container d-flex align-items-center justify-content-center">
+    <a href="login.html"><img src="assets/images/icons/back-icon.svg" class="back-icon" alt="Back Icon"></a>
     <div class="row col-10 col-md-12">
         <div class="col-12 col-md-6 question-ilustration-container">
             <img src="assets/images/ilustration/question-ilustration.svg" class="question-ilustration" alt="">
