feat: add reset password desktop version

--- a/reset-password.html
+++ b/reset-password.html
@@ -10,12 +10,13 @@
     <title>Reset Password</title>
 </head>
 
-<body class="forgot-password-container container d-flex align-items-center justify-content-center">
+<body class="forgot-password-container ">
     <a href="login.html"><img src="assets/images/icons/back-icon.svg" class="back-icon" alt="Back Icon"></a>
-    <div class="row col-10 col-md-12">
+    <div class="row col-10 col-md-12 col-lg-12">
         <div class="col-12 col-md-6 question-ilustration-container">
             <img src="assets/images/ilustration/question-ilustration.svg" class="question-ilustration" alt="">
         </div>
+
         <div class="col-12 col-md-6 reset-form-container">
             <div class="d-flex align-items-center justify-content-center flex-column text-center">
                 <h1>Reset Password</h1>
@@ -26,7 +27,7 @@
                 <label for="email" class="form-label-materialize bg-white">Email</label>
                 <input type="email" class="form-control" id="email" placeholder="">
             </div>
-            <button class="btn btn-primary-color rounded-5px w-100 my-3">Send</button>
+            <button class="btn btn-primary-color rounded-5px my-3">Send</button>
         </div>
     </div>
     <script src="assets/js/popper.min.js"></script>
