--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 password?</a>
 
             <div class="btn-container d-grid gap-2 col-12 mx-auto">
-                <button class="btn btn-primary-color mb-2" type="button">Login</button>
+                <a href="profile.html" class="btn btn-primary-color mb-2" type="button">Login</a>
                 <button class="btn btn-google" type="button">
                     <img src="assets/images/icons/google-icon.svg" alt="google icon" class="google-icon mx-1">Login with
                     google</button>
