feat: add profile page mobile version

--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="dashboard-container">
+        <img src="assets/images/icons/humberger-icon.svg" class="humberger-icon" alt="Show Menu">
         <aside>
             <img src="assets/images/icons/notification-icon.svg" class="notification-icon" alt="">
             <div class="avatar-container">
@@ -38,7 +39,6 @@
         <div id="main-content">
             <div class="image-cover-container">
                 <img src="assets/images/profile-cover-image.png" alt="Profile Image cover" class="image-cover">
-                <div class="image-cover-overlay"></div>
                 <div class="avatar-lg">
                     <div class="d-flex">
                         <img src="assets/images/ilustration/avatar.svg" class="avatar-image-lg" alt="Avatar Image">
@@ -46,8 +46,6 @@
                     </div>
                     <span>Emir Kharisma</span>
                 </div>
-
-
             </div>
             <div class="profile-setting">
                 <h1>Profile Setting</h1>
