wip:add New Class in activity page 1

--- a/activity.html
+++ b/activity.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Profile</title>
+    <title>Activity</title>
 </head>
 
 <body>
@@ -61,8 +61,142 @@
                 </div>
             </div>
         </aside>
-        <div id="main-content">
+        <div id="main-content" class="bg-transparent p-3 d-flex flex-column justify-content-start">
+            <h1 class="">Activity</h1>
+            <div class="card bg-transparent border-0 p-0">
+                <div class="card-header bg-transparent border-0">
+                    My Class
+                </div>
+                <div class="card-body p-0">
+                    <table class="table table-borderless">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <th scope="col">Class Name</th>
+                                <th scope="col">Category</th>
+                                <th scope="col" style="max-width: 25%;">Description</th>
+                                <th scope="col">Progress</th>
+                                <th scope="col">Status</th>
+                                <th scope="col">Score</th>
+                                <th scope="col"></th>
 
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                <td>Front-end fundamentals</td>
+                                <td>Software</td>
+                                <td>Learn the fundamentals of front...</td>
+                                <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
+                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                </td>
+                                <td><span class="score">88</span></td>
+                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </th>
+                            </tr>
+
+                            <tr>
+                                <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                <td>HTML for Beginners</td>
+                                <td>Software</td>
+                                <td>HTML from scratch</td>
+                                <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
+                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
+                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </th>
+                            </tr>
+
+                            <tr>
+                                <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                <td>History of Europe</td>
+                                <td>History</td>
+                                <td>The history of Europe concerns itself...</td>
+                                <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </th>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
+                                width="12" height="12" alt=""></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card border-0 p-0 mt-3">
+                <div class="card-header bg-transparent border-0 my-2">
+                    New Class
+                </div>
+                <div class="card-body">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Quick Search" aria-label="Quick Search"
+                            aria-describedby="button-addon2">
+                        <button class="btn btn-primary-color text-xs" type="button" id="button-addon2">Search</button>
+                    </div>
+                    <table class="table table-borderless">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <th scope="col">Class Name</th>
+                                <th scope="col">Category</th>
+                                <th scope="col" style="max-width: 25%;">Description</th>
+                                <th scope="col">Progress</th>
+                                <th scope="col">Status</th>
+                                <th scope="col">Score</th>
+                                <th scope="col"></th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                <td>Front-end fundamentals</td>
+                                <td>Software</td>
+                                <td>Learn the fundamentals of front...</td>
+                                <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
+                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                </td>
+                                <td><span class="score">88</span></td>
+                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </th>
+                            </tr>
+
+                            <tr>
+                                <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                <td>HTML for Beginners</td>
+                                <td>Software</td>
+                                <td>HTML from scratch</td>
+                                <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
+                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
+                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </th>
+                            </tr>
+
+                            <tr>
+                                <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                <td>History of Europe</td>
+                                <td>History</td>
+                                <td>The history of Europe concerns itself...</td>
+                                <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </th>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
+                                width="12" height="12" alt=""></span>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
