fix: td border radius on activity table

--- a/activity.html
+++ b/activity.html
@@ -92,8 +92,8 @@
                                 <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                 </td>
                                 <td><span class="score">88</span></td>
-                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </th>
+                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </td>
                             </tr>
 
                             <tr>
@@ -104,8 +104,8 @@
                                 <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
                                 <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                 <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
-                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </th>
+                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </td>
                             </tr>
 
                             <tr>
@@ -116,8 +116,8 @@
                                 <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
                                 <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                 <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
-                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </th>
+                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -145,9 +145,8 @@
                                 <th scope="col">Class Name</th>
                                 <th scope="col">Category</th>
                                 <th scope="col" style="max-width: 25%;">Description</th>
-                                <th scope="col">Progress</th>
-                                <th scope="col">Status</th>
-                                <th scope="col">Score</th>
+                                <th scope="col">Level</th>
+                                <th scope="col">Pricing</th>
                                 <th scope="col"></th>
 
                             </tr>
@@ -162,8 +161,8 @@
                                 <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                 </td>
                                 <td><span class="score">88</span></td>
-                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </th>
+                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </td>
                             </tr>
 
                             <tr>
@@ -174,8 +173,8 @@
                                 <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
                                 <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                 <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
-                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </th>
+                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </td>
                             </tr>
 
                             <tr>
@@ -186,8 +185,8 @@
                                 <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
                                 <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                 <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
-                                <th scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </th>
+                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
+                                </td>
                             </tr>
                         </tbody>
                     </table>
