--- a/activity.html
+++ b/activity.html
@@ -68,131 +68,198 @@
                     My Class
                 </div>
                 <div class="card-body p-0">
-                    <table class="table table-borderless">
-                        <thead>
-                            <tr>
-                                <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
-                                <th scope="col">Class Name</th>
-                                <th scope="col">Category</th>
-                                <th scope="col" style="max-width: 25%;">Description</th>
-                                <th scope="col">Progress</th>
-                                <th scope="col">Status</th>
-                                <th scope="col">Score</th>
-                                <th scope="col"></th>
+                    <div class="table-responsive">
+                        <table class="table table-borderless table-responsive">
+                            <thead>
+                                <tr>
+                                    <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
+                                    <th scope="col">Class Name</th>
+                                    <th scope="col">Category</th>
+                                    <th scope="col" style="max-width: 25%;">Description</th>
+                                    <th scope="col">Progress</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Score</th>
+                                    <th scope="col"></th>
 
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>Front-end fundamentals</td>
-                                <td>Software</td>
-                                <td>Learn the fundamentals of front...</td>
-                                <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
-                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                </td>
-                                <td><span class="score">88</span></td>
-                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </td>
-                            </tr>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                    <td>Front-end fundamentals</td>
+                                    <td>Software</td>
+                                    <td>Learn the fundamentals of front...</td>
+                                    <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
+                                    <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                    </td>
+                                    <td><span class="score">88</span></td>
+                                    <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
+                                            alt="">
+                                    </td>
+                                </tr>
 
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>HTML for Beginners</td>
-                                <td>Software</td>
-                                <td>HTML from scratch</td>
-                                <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
-                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
-                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </td>
-                            </tr>
+                                <tr>
+                                    <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                    <td>HTML for Beginners</td>
+                                    <td>Software</td>
+                                    <td>HTML from scratch</td>
+                                    <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
+                                    <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                    <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
+                                    <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
+                                            alt="">
+                                    </td>
+                                </tr>
 
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>History of Europe</td>
-                                <td>History</td>
-                                <td>The history of Europe concerns itself...</td>
-                                <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
-                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
-                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="d-flex align-items-center justify-content-center">
-                        <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
-                                width="12" height="12" alt=""></span>
+                                <tr>
+                                    <th scope=" row"><input type="checkbox" name="" id=""></th>
+                                    <td>History of Europe</td>
+                                    <td>History</td>
+                                    <td>The history of Europe concerns itself...</td>
+                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
+                                    <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                    <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
+                                            alt="">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="d-flex align-items-center justify-content-center">
+                            <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
+                                    width="12" height="12" alt=""></span>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card border-0 p-0 mt-3">
+            <div class="card border-0 p-0 mt-4 mt-md-5 col-12">
                 <div class="card-header bg-transparent border-0 my-2">
                     New Class
                 </div>
                 <div class="card-body">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Quick Search" aria-label="Quick Search"
-                            aria-describedby="button-addon2">
+                    <div class="input-group">
+                        <input type="text" class="form-control col-12" placeholder="Quick Search"
+                            aria-label="Quick Search" aria-describedby="button-addon2">
                         <button class="btn btn-primary-color text-xs" type="button" id="button-addon2">Search</button>
                     </div>
-                    <table class="table table-borderless">
-                        <thead>
-                            <tr>
-                                <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
-                                <th scope="col">Class Name</th>
-                                <th scope="col">Category</th>
-                                <th scope="col" style="max-width: 25%;">Description</th>
-                                <th scope="col">Level</th>
-                                <th scope="col">Pricing</th>
-                                <th scope="col"></th>
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>Front-end fundamentals</td>
-                                <td>Software</td>
-                                <td>Learn the fundamentals of front...</td>
-                                <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
-                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                </td>
-                                <td><span class="score">88</span></td>
-                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>HTML for Beginners</td>
-                                <td>Software</td>
-                                <td>HTML from scratch</td>
-                                <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
-                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
-                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>History of Europe</td>
-                                <td>History</td>
-                                <td>The history of Europe concerns itself...</td>
-                                <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
-                                <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
-                                <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="d-flex align-items-center justify-content-center">
-                        <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
-                                width="12" height="12" alt=""></span>
+                    <div class="mt-0 col-12 search-filter mb-3">
+                        <select name="category" id="category">
+                            <option value="">Categories</option>
+                        </select>
+                        <select name="level" id="level">
+                            <option value="">Level</option>
+                        </select>
+                        <select name="pricing" id="pricing">
+                            <option value="">Pricing</option>
+                        </select>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-borderless new-class-table p-2" cellspacing='10'>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Class Name</th>
+                                    <th scope="col">Category</th>
+                                    <th scope="col" style="max-width: 25%;">Description</th>
+                                    <th scope="col">Level</th>
+                                    <th scope="col">Pricing</th>
+                                    <th scope="col"></th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                                <tr>
+                                    <td>Know more Javascript</td>
+                                    <td>Software</td>
+                                    <td>Javascript from the basic for...</td>
+                                    <td>Beginner</td>
+                                    <td>Free</td>
+                                    <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
+                                    <td><img src="assets/images/icons/list-icon.svg" alt=""></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
