feat: add pagination for new class in activity 1

--- a/activity.html
+++ b/activity.html
@@ -261,6 +261,21 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="col-12 pagination-container d-flex flex-row justify-content-between align-items-center">
+                        <span class="w-100">Showing 10 out of 64</span>
+                        <div class="d-flex flex-row justify-content-evenly">
+                            <div class="table-page touchable"><img class="rotate-180"
+                                    src="assets/images/icons/forward-icon.svg" alt="">
+                            </div>
+                            <span class="table-page touchable active">1</span>
+                            <span class="table-page touchable">2</span>
+                            <span class="table-page touchable">3</span>
+                            <span class="table-page touchable">4</span>
+                            <span class="table-page touchable">5</span>
+                            <div class="table-page touchable"><img src="assets/images/icons/forward-icon.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
