fix: table row shadow on activity 1

--- a/activity.html
+++ b/activity.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="card-body p-0">
                     <div class="table-responsive">
-                        <table class="table table-borderless table-responsive">
+                        <table class="table table-borderless my-class-table table-responsive">
                             <thead>
                                 <tr>
                                     <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
@@ -155,7 +155,8 @@
                         </select>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-borderless new-class-table p-2" cellspacing='10'>
+                        <table class="table table-borderless new-class-table p-2" style="border-collapse:separate;
+                        border-spacing:0 5px;">
                             <thead>
                                 <tr>
                                     <th scope="col">Class Name</th>
