--- a/activity-2.html
+++ b/activity-2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Activity</title>
+    <title>My Class</title>
 </head>
 
 <body>
@@ -72,7 +72,7 @@
             <div class="card bg-transparent border-0 p-0">
                 <div class="card-header bg-transparent border-0 col-12 col-md-12 col-lg-12 p-0 my-4 my-md-4 my-lg-2 ">
                     <div class="d-flex flex-row justify-content-between row">
-                        <div class="d-flex flex-row justify-content-between col-12 col-md-8">
+                        <div class="d-flex flex-row justify-content-between col-10 col-md-8">
                             <input type="text" class="form-control rounded-5px" placeholder="Quick Search"
                                 aria-label="Quick Search">
                             <button class="btn btn-primary-color text-xs mx-2">Search</button>
