fix: margin top card body activity 3

--- a/activity-3.html
+++ b/activity-3.html
@@ -108,7 +108,7 @@
 
                 <div class="card-header border-0 col-12 col-md-12 col-lg-12 p-0 mt-5 ">
                 </div>
-                <div class="card-body p-0 mt-4">
+                <div class="card-body">
                     <div class="class-description-container">
                         <div class="tab-menu-container">
                             <div class="tab-menu touchable active">Information</div>
