fix: fix sidebar logout on hovr

--- a/dashboard-2.html
+++ b/dashboard-2.html
@@ -59,6 +59,7 @@
                     <img src="assets/images/icons/logout-icon.svg" class="menu-icon text-danger" alt="Logout Icon">
                     <span class="text-danger">Logout</span>
                 </div>
+                <div class="empty-menu-link"></div>
             </div>
         </aside>
         <div id="dashboard-peserta">
