fix: profile active on profile.html

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
     <div class="dashboard-container">
         <img src="assets/images/icons/humberger-icon.svg" class="humberger-icon" alt="Show Menu">
         <aside class="d-flex">
-            <div class="avatar-container">
+            <div class="avatar-container active">
                 <svg width="10%" height="10%" viewBox="0 0 24 24" class="notification-icon touchable fill-white"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -26,8 +26,8 @@
                         fill="#FF0000" />
                 </svg>
                 <img src="assets/images/ilustration/avatar.svg" class="avatar-image" alt="">
-                <span class="avatar-name text-white">Emir Kharisma</span>
-                <span class="avatar-status mt-1 text-white">Online</span>
+                <span class="avatar-name">Emir Kharisma</span>
+                <span class="avatar-status mt-1">Online</span>
             </div>
             <div class="menu-container">
                 <div class="menu-link touchable">
