fix: add sidebar id to aside element on profile page

--- a/profile.html
+++ b/profile.html
@@ -32,10 +32,10 @@
         </div>
     </nav>
     <div class="dashboard-container">
-        <aside>
+        <aside id="sidebar">
             <div class="avatar-container active">
                 <svg id="sidebar-notification" width="10%" height="10%" viewBox="0 0 24 24"
-                    class="notification-icon touchable fill-white d-none d-md-block" xmlns="http://www.w3.org/2000/svg">
+                    class=" touchable fill-white d-none d-md-block" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M10.9841 22.0001C11.3627 21.9913 11.7259 21.849 12.0097 21.5983C12.2934 21.3475 12.4794 21.0045 12.5346 20.6299H9.37354C9.43031 21.0147 9.62493 21.3658 9.92119 21.6178C10.2174 21.8698 10.5952 22.0057 10.9841 22.0001Z" />
                     <path
