--- a/activity-2.html
+++ b/activity-2.html
@@ -279,6 +279,7 @@
         </div>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
