feat: add responsive mode

--- a/dashboard.html
+++ b/dashboard.html
@@ -301,6 +301,7 @@
         </aside>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
